<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Home Stay Manager</string>
    <string name="action_settings">Settings</string>
    <string name="reg_prof_title">Register Profile</string>
    <string name="username">Username</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="home_address">Address</string>
    <string name="gender">Gender</string>
    <string name="preferences">Preferences</string>
    <string name="pref_allergies">Allergies</string>
    <string name="pref_smoking">Smoking</string>
    <string name="pref_pet">Pets</string>
    <string name="pref_distance_from_ucd">Distance from UCD</string>
    <string name="pref_family_structure">Family Structure</string>
    <string name="pref_genders">Genders</string>
    <string name="user_list_title">Profile List</string>
    <string name="save_data_button">Save</string>
    <string name="edit_profile_title">Edit Profile</string>
    <string name="edit_button">Edit</string>
    <string name="delete_button">Delete</string>
    <string name="title_activity_reg_profile">RegProfile</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main_activity2">MainActivity2</string>

</resources>